# paper-vector-search

./: pyproject.toml
paper_similarity/: embed_text.py
