[tool.poetry]
name = "paper-similarity"
version = "0.1.0"
description = ""
authors = ["Fangyi Zhou <me@fangyi.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-cloud-aiplatform = "^1.52.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
